--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jspdf": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.1.5",
     "signature_pad": "^5.0.4"
   },
   "devDependencies": {
